--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -35,6 +35,11 @@
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
+    "redux-slider-monitor": "^1.0.6",
+    "redux-devtools-inspector": "^0.6.1",
+    "redux-devtools-diff-monitor": "^5.0.5",
+    "redux-devtools-filterable-log-monitor": "^0.6.6",
+    "redux-devtools-chart-monitor": "^1.4.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
