--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -28,28 +28,34 @@
   },
   "homepage": "https://github.com/gaearon/redux-devtools#readme",
   "dependencies": {
-    "classnames": "^2.1.2",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-hot-loader": "^3.0.0-beta.1",
-    "react-redux": "^4.1.0",
-    "redux": "^3.1.1"
+    "classnames": "^2.2.5",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.17",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015-loose": "^6.1.3",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "node-libs-browser": "^0.5.2",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015" : "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "node-libs-browser": "^1.0.0",
     "raw-loader": "^0.5.1",
-    "redux-devtools": "^3.0.1",
-    "redux-devtools-dock-monitor": "^1.0.1",
-    "redux-devtools-log-monitor": "^1.0.2",
-    "style-loader": "^0.12.3",
-    "todomvc-app-css": "^2.0.1",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "redux-slider-monitor": "^1.0.6",
+    "redux-devtools-inspector": "^0.6.1",
+    "redux-devtools-diff-monitor": "^5.0.5",
+    "redux-devtools-filterable-log-monitor": "^0.6.6",
+    "redux-devtools-chart-monitor": "^1.4.1",
+    "style-loader": "^0.13.1",
+    "todomvc-app-css": "^2.0.6",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
