--- a/examples/todomvc/package.json
+++ b/examples/todomvc/package.json
@@ -56,6 +56,7 @@
     "style-loader": "^0.13.1",
     "todomvc-app-css": "^2.0.6",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "open": "^0.0.5"
   }
 }
