--- a/examples/typescriptcounter/package.json
+++ b/examples/typescriptcounter/package.json
@@ -2,9 +2,9 @@
   "name": "counter-redux-typescript",
   "version": "0.0.0",
   "description": "Counter example for redux using typescript",
-  "main": "server.js",
+  "main": "server.dev.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.dev.js"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "redux-devtools-chart-monitor": "^1.4.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "open": "^0.0.5"
+    "open": "^0.0.5",
+    "ts-loader": "^0.8.2"
   }
 }
