--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -42,6 +42,7 @@
     "redux-devtools-chart-monitor": "^1.4.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "open": "^0.0.5"
+    "open": "^0.0.5",
+    "eslint": "^3.0.1"
   }
 }
