--- a/examples/typescriptcounter/package.json
+++ b/examples/typescriptcounter/package.json
@@ -4,7 +4,10 @@
   "description": "Counter example for redux using typescript",
   "main": "server.dev.js",
   "scripts": {
-    "start": "node server.dev.js"
+    "start": "npm-run-all --parallel tsc:w open:dev",
+    "open:dev": "node server.dev.js",
+    "tsc": "tsc",
+    "tsc:w": "tsc --w"
   },
   "repository": {
     "type": "git",
@@ -32,17 +35,20 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "node-libs-browser": "^1.0.0",
+    "open": "^0.0.5",
     "redux-devtools": "^3.3.1",
+    "redux-devtools-chart-monitor": "^1.4.1",
+    "redux-devtools-diff-monitor": "^5.0.5",
     "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-filterable-log-monitor": "^0.6.6",
+    "redux-devtools-inspector": "^0.6.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-slider-monitor": "^1.0.6",
-    "redux-devtools-inspector": "^0.6.1",
-    "redux-devtools-diff-monitor": "^5.0.5",
-    "redux-devtools-filterable-log-monitor": "^0.6.6",
-    "redux-devtools-chart-monitor": "^1.4.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "open": "^0.0.5",
-    "ts-loader": "^0.8.2"
+    "npm-run-all": "^2.3.0"
   }
 }
