--- a/examples/typescriptcounter/tsconfig.json
+++ b/examples/typescriptcounter/tsconfig.json
@@ -9,8 +9,8 @@
         "pretty": true
     },
     "files": [
-        //"./typings/index.d.ts",
+        "./typings/index.d.ts",
         //"./src/components/Hello.tsx",
-        "./src/index.ts"
+        "./src/index.tsx"
     ]
 }
