Updated typescript components

--- a/examples/typescriptcounter/tsconfig.json
+++ b/examples/typescriptcounter/tsconfig.json
@@ -8,9 +8,7 @@
         "jsx": "preserve",
         "pretty": true
     },
-    "files": [
-        "./typings/index.d.ts",
-        //"./src/components/Hello.tsx",
-        "./src/index.tsx"
+    "filesGlob": [
+        "./src/**/*.ts"
     ]
 }
