--- a/examples/typescriptcounter/.vscode/settings.json
+++ b/examples/typescriptcounter/.vscode/settings.json
@@ -5,7 +5,7 @@
         "node_modules": true,
         "typings": true,
         "dist": true,
-        "build": true,
+        //"build": true,
         "**/*.log": true,
         ".vscode": true
     }
