--- a/examples/typescriptcounter/package.json
+++ b/examples/typescriptcounter/package.json
@@ -7,7 +7,8 @@
     "start": "npm-run-all --parallel tsc:w open:dev",
     "open:dev": "node server.dev.js",
     "tsc": "tsc",
-    "tsc:w": "tsc --w"
+    "tsc:w": "tsc --w",
+    "postinstall": "typings install"
   },
   "repository": {
     "type": "git",
