--- a/examples/typescripttodomvc/package.json
+++ b/examples/typescripttodomvc/package.json
@@ -2,9 +2,13 @@
   "name": "todomvc",
   "version": "0.0.0",
   "description": "TodoMVC example for redux",
-  "main": "server.js",
+  "main": "server.dev.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "npm-run-all --parallel tsc:w open:dev",
+    "open:dev": "node server.dev.js",
+    "tsc": "tsc",
+    "tsc:w": "tsc --w",
+    "postinstall": "typings install"
   },
   "repository": {
     "type": "git",
@@ -29,34 +33,39 @@
   "homepage": "https://github.com/gaearon/redux-devtools#readme",
   "dependencies": {
     "classnames": "^2.2.5",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "react-hot-loader": "^3.0.0-beta.2",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015" : "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "node-libs-browser": "^1.0.0",
-    "raw-loader": "^0.5.1",
+    "open": "^0.0.5",
     "redux-devtools": "^3.3.1",
+    "redux-devtools-chart-monitor": "^1.4.1",
+    "redux-devtools-diff-monitor": "^5.0.5",
     "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-filterable-log-monitor": "^0.6.6",
+    "redux-devtools-inspector": "^0.6.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-slider-monitor": "^1.0.6",
-    "redux-devtools-inspector": "^0.6.1",
-    "redux-devtools-diff-monitor": "^5.0.5",
-    "redux-devtools-filterable-log-monitor": "^0.6.6",
-    "redux-devtools-chart-monitor": "^1.4.1",
-    "style-loader": "^0.13.1",
-    "todomvc-app-css": "^2.0.6",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "open": "^0.0.5"
+    "npm-run-all": "^2.3.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "todomvc-app-css": "^2.0.6"
   }
 }
